# winlog2

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  REORGANISATION.md  WINDOWS_BUILD.md  build-linux.sh  build-windows.ps1  check-build.sh  rust-toolchain.toml  ssh-init.ps1
.github/: copilot-instructions.md
client/: Cargo.toml  README.md
client/src/: config.rs  lib.rs
php/: README.md  config.php  delete_base.php  index.php  index_sql.php  purge_base.php
serveur/: CREATION_SERVEUR_RUST.txt  Cargo.toml  MIGRATION_BDD_2026.md  NOUVELLE_STRUCTURE.md  README.md  README_OLD_PHP.md  SYNTHESE_VISUELLE.txt  config.toml
serveur/examples/: test_path_handling.rs
serveur/php/: creation_base.php  index.php
serveur/scripts/: README.md  create_base.sh  delete_base.sh  migrate_to_new_structure.sh  purge_base.sh  rotate_daily.sh
serveur/src/: config.rs  database.rs  handlers.rs  main.rs  models.rs  queries.rs
src/: config.rs  lib.rs
