[package]
name = "winlog"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.2"
# Client HTTP simple sans dépendances TLS complexes
minreq = "2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"
