[package]
name = "winlog-client"
version = "0.1.0"
edition = "2024"
authors = ["Jerome"]
description = "Client de monitoring multi-plateforme (Windows/Linux) pour Winlog"

# Binaires générés
[[bin]]
name = "logon"
path = "src/bin/logon.rs"

[[bin]]
name = "logout"
path = "src/bin/logout.rs"

[[bin]]
name = "matos"
path = "src/bin/matos.rs"

[dependencies]
# Collecte d'informations système (Windows + Linux)
sysinfo = "0.37.2"
# Client HTTP léger synchrone
minreq = "2.14"
# Sérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Timestamps ISO 8601
chrono = { version = "0.4", features = ["serde"] }
# Détection username multi-plateforme
whoami = "1.4"

# Optimisations de compilation
[profile.release]
strip = true        # Supprime les symboles de debug
lto = true         # Link Time Optimization
opt-level = "z"    # Optimisation pour la taille
codegen-units = 1  # Meilleure optimisation
